feat: [RTD-2454] collect metadata for each chunk (#166)